// Copyright 2019 Luis Guill√©n Civera <luisguillenc@gmail.com>. View LICENSE.

syntax = "proto3";

import "google/protobuf/empty.proto";

package luids.xlist.v1;
option go_package = "github.com/luids-io/api/xlist/grpc/pb";

service Check {
  rpc Check(CheckRequest) returns (CheckResponse) {}
  rpc Resources(google.protobuf.Empty) returns (ResourcesResponse) {}
}

//enums
enum Resource {
  IPV4   = 0;
  IPV6   = 1;
  DOMAIN = 2;
  MD5    = 3;
  SHA1   = 4;
  SHA256 = 5;
}

message CheckRequest {
  string name = 1;
  Resource resource = 2;
}

message CheckResponse {
  bool result = 1;
  string reason = 2;
  int32 TTL = 3 ;
}

message ResourcesResponse {
  repeated Resource resources = 1;
}
